# rustls-openssl

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test.sh
.github/workflows/: ci.yml
examples/: post-quantum.rs  quinn.rs
src/: aead.rs  cipher_suites.rs  ecdh.rs  hash.rs  hkdf.rs  hmac.rs  kx.rs  lib.rs  prf.rs  quic.rs  quinn.rs  signer.rs  tls12.rs  tls13.rs  verify.rs
src/kx_group/: ec.rs  kem.rs  mod.rs  x25519.rs
src/openssl_internal/: hpke.rs  kem.rs  mod.rs  prf.rs
src/test/: mod.rs
src/test/schemas/: aead.rs  hkdf.rs  mod.rs
tests/: 0001-Patch-openssl-into-rustls.patch  it.rs  patch.sh  server.rs
