[package]
name = "rustls-openssl"
authors = ["Tom Fay <tom@teamfay.co.uk>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rustls crypto provider for OpenSSL"
homepage = "https://github.com/tofay/rustls-openssl"
repository = "https://github.com/tofay/rustls-openssl"
readme = "README.md"

[dependencies]
windows = { version = "0.58.0", features = [
    "Security_Cryptography",
    "Win32_Security_Cryptography",
    "Security_Cryptography_Core",
    "Storage_Streams",
    "Win32_System_WinRT",
] }
foreign-types-shared = { version = "0.1.1", optional = true }
rustls = { version = "0.23.0", default-features = false }
rustls-webpki = { version = "0.102.2", default-features = false }
once_cell = "1.8.0"
zeroize = "1.8.1"
openssl = "0.10.68"
openssl-sys = "0.9.104"

[features]
default = []
fips = []
tls12 = ["rustls/tls12", "foreign-types-shared"]

[dev-dependencies]
hex = "0.4.3"
rcgen = { version = "0.13.1", default-features = false, features = ["ring"] }
rstest = "0.23.0"
# Use aws_lc_rs to test our provider
rustls = { version = "0.23.0", features = ["ring"], default-features = false }
rustls-pemfile = "2"
webpki-roots = "0.26"
wycheproof = { version = "0.6.0", default-features = false, features = [
    "aead",
    "hkdf",
    "mac",
    "ecdh",
] }
