[package]
name = "rustls-openssl"
authors = ["Tom Fay <tom@teamfay.co.uk>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rustls crypto provider for OpenSSL"
homepage = "https://github.com/tofay/rustls-openssl"
repository = "https://github.com/tofay/rustls-openssl"
readme = "README.md"

[dependencies]
foreign-types-shared = { version = "0.1.1", optional = true }
once_cell = "1.8.0"
openssl = "0.10.68"
openssl-sys = "0.9.104"
quinn = { version = "0.11.6", optional = true, default-features = false }
rustls = { version = "0.23.0", default-features = false }
rustls-webpki = { version = "0.102.2", default-features = false }
zeroize = "1.8.1"

[features]
default = ["tls12"]
fips = []
tls12 = ["rustls/tls12", "foreign-types-shared"]
quinn = ["dep:quinn"]

[dev-dependencies]
env_logger = "0.11.5"
hex = "0.4.3"
quinn = { version = "0.11.6", default-features = false, features = [
    "runtime-tokio",
    "log",
] }
quinn-proto = { version = "0.11.9", default-features = false, features = [
    "rustls",
] }
rcgen = { version = "0.13.1", default-features = false, features = [
    "aws_lc_rs",
] }
rstest = "0.23.0"
# Use aws_lc_rs to test our provider
rustls = { version = "0.23.0", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
webpki-roots = "0.26"
wycheproof = { version = "0.6.0", default-features = false, features = [
    "aead",
    "hkdf",
    "ecdh",
    "xdh"
] }

[[example]]
name = "quinn"
path = "examples/quinn.rs"
required-features = ["quinn"]

[package.metadata.docs.rs]
features = ["quinn"]
