[package]
name = "rustls-openssl"
authors = ["Tom Fay <tom@teamfay.co.uk>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rustls crypto provider for OpenSSL"
homepage = "https://github.com/tofay/rustls-openssl"
repository = "https://github.com/tofay/rustls-openssl"
readme = "README.md"

[dependencies]
foreign-types = "0.3.1"
once_cell = "1.8.0"
openssl = "0.10.68"
openssl-sys = "0.9.104"
rustls = { version = "0.23.20", default-features = false }
rustls-webpki = { version = "0.102.2", default-features = false }
zeroize = "1.8.1"

[features]
default = ["tls12"]
fips = []
tls12 = ["rustls/tls12"]

[dev-dependencies]
env_logger = "0.11.5"
hex = "0.4.3"
rcgen = { version = "0.13.1", default-features = false, features = [
    "aws_lc_rs",
] }
rstest = "0.23.0"
# Use aws_lc_rs to test our provider
rustls = { version = "0.23.0", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
wycheproof = { version = "0.6.0", default-features = false, features = [
    "aead",
    "hkdf",
    "ecdh",
    "xdh",
] }
